# amath505

./: .gitignore  Tutorial4_waves.ipynb  Tutorial5_PseudoSpectralMethod.ipynb  environment.yml  kd-calculations.ipynb  lab1.ipynb  midterm_prep.ipynb  tutorial1.ipynb  tutorial2.ipynb  tutorial3.ipynb
hw1/: hw1.ipynb  lab1-water-spout-measurements.csv
hw2/: Homework 2.ipynb  lab notes.xlsx  lab2-data.csv
hw3/: Homework 3.ipynb  lab3_data.csv  lab3_image_data.csv  lab3_wed_data.csv  streamlines.ipynb  wed-lab.ipynb
hw4/: Homework 4.tex
hw5/: Homework 5.ipynb  Homework 5.py  Homework 5.tex  pyproject.toml
hw5/src/hw5/: __init__.py  __main__.py  anim_util.py  vortex.py
hw5/tests/: test_vortex.py
hw6/: calculations.ipynb
midterm/: midterm.ipynb  midterm.py
project/: bibliography.bib  kh-instability-paper.tex
