[project]
name = "hw5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jonathan Elsner", email = "jeelsner+gh@outlook.com"},
]
dependencies = ["scipy>=1.14.1", "numpy>=2.1.3", "matplotlib>=3.9.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = ["-e file:///${PROJECT_ROOT}/#egg=hw5"]
[dependency-groups]
test = ["pytest>=8.3.3", "coverage>=7.6.4", "ruff>=0.7.2"]
interactive = ["ipython>=8.29.0", "ipykernel>=6.29.5", "pip>=24.3.1", "ipympl>=0.9.4", "jupyter>=1.1.1", "notebook-as-pdf>=0.5.0"]
